--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ hackLightsVersion=f0ba5deaff
 kryoNetVersion=2.22.9
 screenManagerVersion=0.7.1
 guacamoleVersion=v0.3.6
+jaudiotaggerVersion=2.3.15
 texturePackerOnlyVersion=1.14.0.0
 textureUnpackerOnlyVersion=1.14.0.0
 shapeDrawerVersion=2.6.0
